--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-    "express": "~3.4.4"
+    "ajv": "^4.11.1",
+    "basic-auth": "^1.1.0",
+    "body-parser": "*",
+    "cors": "^2.8.1",
+    "es6-promise": "*",
+    "express": "~3.4.4",
+    "popsicle": "^0.5.13"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
